alignwide fix

--- a/assets/sass/03-generic/vertical-margins.scss
+++ b/assets/sass/03-generic/vertical-margins.scss
@@ -173,5 +173,5 @@
  
  
  #content {
-	@extend %responsive-alignfull-width;
+	@extend %responsive-alignwide-width;
  }
